[#11] Update to uProtocol spec v1.6.0-alpha.6